<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_raffles">

    <fragment
        android:id="@+id/nav_raffles"
        android:name="com.example.whowon.ui.raffles.RafflesFragment"
        android:label="@string/menu_raffles"
        tools:layout="@layout/fragment_raffles" >
    </fragment>

    <fragment
        android:id="@+id/nav_free_participation"
        android:name="com.example.whowon.ui.freeParticipation.FreeParticipationFragment"
        android:label="@string/menu_free_participation"
        tools:layout="@layout/fragment_free_participation" >

    </fragment>

    <fragment
        android:id="@+id/nav_car_win"
        android:name="com.example.whowon.ui.carWin.CarWinFragment"
        android:label="@string/menu_car_win"
        tools:layout="@layout/fragment_car_win" >

    </fragment>
    <fragment
        android:id="@+id/nav_win_phone_tablet"
        android:name="com.example.whowon.ui.winPhoneTablet.WinPhoneTabletFragment"
        android:label="@string/menu_win_phone_tablet"
        tools:layout="@layout/fragment_win_phone_tablet" >

    </fragment>
    <fragment
        android:id="@+id/nav_win_vacation"
        android:name="com.example.whowon.ui.winVacation.WinVacationFragment"
        android:label="@string/menu_win_vacation"
        tools:layout="@layout/fragment_win_vacation" >

    </fragment>
    <fragment
        android:id="@+id/nav_what_i_follow"
        android:name="com.example.whowon.ui.whatIFollow.WhatIFollowFragment"
        android:label="@string/menu_what_i_follow"
        tools:layout="@layout/fragment_what_i_follow" >

    </fragment>
    <fragment
        android:id="@+id/nav_beginners"
        android:name="com.example.whowon.ui.beginners.BeginnersFragment"
        android:label="@string/menu_beginners"
        tools:layout="@layout/fragment_beginners" >

    </fragment>
</navigation>